# Bitmeter

./: .gitignore  Bitmeter.csproj  Bitmeter.sln  CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  LICENSE  Program.cs  README.md  gui_master.py  icons.py  main.py
img/: icon.xpm
src/: frame.cpp  frame.h  gui_master.py  icons.py  main.cpp  main.h
